--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
 			color: white;
 			font-family: Lato;
 			position: relative;
-			top: 2em;
+			top: 6vh;
+			height: 2vh;
 	}
 	.footer .divider {
-			height: 1em;
+			height: 2vh;
 			position: relative;
-			top: 2em;
+			top: 6vh;
 			margin-left: 0.5em;
 			margin-right: 0.5em;
 	}
