--- a/index.html
+++ b/index.html
@@ -14,19 +14,20 @@
 			background:#003366;
 			display: block;
 			padding-left: 36px;
+			font-size: medium;
 	}
 	.footer a {
 			text-decoration: none;
 			color: white;
 			font-family: Lato;
 			position: relative;
-			top: 6vh;
-			height: 2vh;
+			top: 2em;
+			height: 1em;
 	}
 	.footer .divider {
-			height: 2vh;
+			height: 1em;
 			position: relative;
-			top: 6vh;
+			top: 2em;
 			margin-left: 0.5em;
 			margin-right: 0.5em;
 	}
