--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			background:#003366;
 			display: block;
 			padding-left: 36px;
-			font-size: large;
+			font-size: 5mm;
 	}
 	.footer a {
 			text-decoration: none;
