--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
 			background:#003366;
 			display: block;
 			padding-left: 36px;
-			font-size: 5mm;
+			font-family: Lato;
+			font-size: 2em;
 	}
 	.footer a {
 			text-decoration: none;
 			color: white;
-			font-family: Lato;
 			position: relative;
 			top: 2em;
-			height: 1em;
 	}
 	.footer .divider {
 			height: 1em;
