--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
 			display: block;
 			padding-left: 36px;
 			font-family: Lato;
-			font-size: 2em;
+			font-size: 4vh;
 	}
 	.footer a {
 			text-decoration: none;
 			color: white;
 			position: relative;
-			top: 2em;
+			top: 4vh;
 	}
 	.footer .divider {
 			height: 1em;
 			position: relative;
-			top: 2em;
+			top: 4vh;
 			margin-left: 0.5em;
 			margin-right: 0.5em;
 	}
